--- a/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MainPage.xaml
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiApp1.MainPage">
+             x:Class="MauiApp1.MainPage"
+             xmlns:viewmodel="clr-namespace:MauiApp1.ViewModel"
+             x:DataType="viewmodel:MainViewModel">
 
     <Grid RowDefinitions="150, Auto, *"
           ColumnDefinitions="0.25*,0.75*"
@@ -14,33 +16,39 @@
                Source="dotnet_bot.png"
                Background="Orange" />
 
-        <Entry Placeholder="Enter task"
-               Grid.Row="1"/>
+        <Entry Placeholder="Enter task" 
+               Text="{Binding Text}"
+               Grid.Row="1"/> 
 
         <Button Text="Add"
+                Command="{Binding AddCommand}"
                 Grid.Row="1"
                 Grid.Column="1" />
 
-        <CollectionView Grid.Row="2" Grid.Column="2">
-            <CollectionView.ItemsSource>
-                <x:Array Type="{x:Type x:String}">
-                    <x:String>Apple</x:String>
-                    <x:String>Bananas</x:String>
-                    <x:String>Oranges</x:String>
-                </x:Array>
-            </CollectionView.ItemsSource>
+        <CollectionView Grid.Row="2" Grid.ColumnSpan="2"
+                        ItemsSource="{Binding Items}"
+                        SelectionMode="None">
+            
             <CollectionView.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate x:DataType="{x:Type x:String}">
                     <SwipeView>
                         <SwipeView.RightItems >
                             <SwipeItems >
-                                <SwipeItem Text="Delete" BackgroundColor="red" />
+                                <SwipeItem Text="Delete" BackgroundColor="red" 
+                                           Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MainViewModel}}, Path=DeleteCommand}"
+                                           CommandParameter="{Binding .}"/>
                             </SwipeItems>
                         </SwipeView.RightItems>
 
                         <Grid Padding="0.5">
-                            <Frame Padding="18"
-                                       >
+                            <Frame Padding="18">
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer
+                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MainViewModel}}, Path=TapCommand}"
+                                        CommandParameter="{Binding .}">
+                                   </TapGestureRecognizer>
+                                </Frame.GestureRecognizers>
+
                                 <Label Text="{Binding .}"
                                    FontSize="18" 
                                    />
